I got stuck here

--- a/slider.html
+++ b/slider.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slider</title>
 
-    <link rel="stylesheet" href="jquery.fancybox.css" type="text/css" media="screen" />
+    <link
+      rel="stylesheet"
+      href="jquery.fancybox.css"
+      type="text/css"
+      media="screen"
+    />
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-<style>
-  
-</style>
-    
-
+    <style></style>
   </head>
   <body>
     <section id="product-slider">
@@ -65,47 +69,55 @@
             <div class="product-content">
               <h5>title</h5>
               <p>
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae tempore asperiores fugiat. Dolorem et quis saepe nihil eum, aut consequuntur illum eveniet harum animi, dolores adipisci earum incidunt vel neque! saepe nihil eum, aut consequuntur illum eveniet harum animi, dolores adipisci earum incidunt vel neque!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Repudiandae tempore asperiores fugiat. Dolorem et quis saepe
+                nihil eum, aut consequuntur illum eveniet harum animi, dolores
+                adipisci earum incidunt vel neque! saepe nihil eum, aut
+                consequuntur illum eveniet harum animi, dolores adipisci earum
+                incidunt vel neque!
               </p>
               <h5 class="product-content-title2">title</h5>
               <p>
-               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea illum dignissimos consequuntur exercitationem rerum magni consectetur nulla id aut sed eveniet, libero perferendis numquam, deleniti obcaecati qui dolorum voluptatum laboriosam?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea
+                illum dignissimos consequuntur exercitationem rerum magni
+                consectetur nulla id aut sed eveniet, libero perferendis
+                numquam, deleniti obcaecati qui dolorum voluptatum laboriosam?
               </p>
             </div>
           </div>
           <div class="item">
             <div class="product-item">
-                <div class="item1">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item2">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item3">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item4">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item5">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item6">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
+              <div class="item1">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
               </div>
+              <div class="item2">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+              <div class="item3">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+              <div class="item4">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+              <div class="item5">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+              <div class="item6">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+            </div>
 
             <div class="product-content">
               <h5>Sportswear</h5>
@@ -129,37 +141,37 @@
 
           <div class="item">
             <div class="product-item">
-                <div class="item1">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item2">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item3">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item4">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item5">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
-                <div class="item6">
-                  <a href="images/popuap.png" class="fancybox" rel="progallery"
-                    ><img src="images/b10.png" alt=""
-                  /></a>
-                </div>
+              <div class="item1">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
               </div>
+              <div class="item2">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+              <div class="item3">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+              <div class="item4">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+              <div class="item5">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+              <div class="item6">
+                <a href="images/popuap.png" class="fancybox" rel="progallery"
+                  ><img src="images/b10.png" alt=""
+                /></a>
+              </div>
+            </div>
 
             <div class="product-content">
               <h5>Work wear</h5>
@@ -204,27 +216,18 @@
       </div>
     </section>
 
-
-
-
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src=""></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-<script src="bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
     <script src="jquery.fancybox.pack.js"></script>
-   
+
     <script>
-
-
-
-
-
       $(document).ready(function () {
-        $(".fancybox").fancybox();
-            });   
-</script>
+        $('.fancybox').fancybox()
+      })
+    </script>
   </body>
 </html>
